--- a/vms_app/templates/vms-vehicles-list.html
+++ b/vms_app/templates/vms-vehicles-list.html
@@ -2,6 +2,26 @@
 {% block title %}{% endblock %}
 {% block content %}
 
+<h1>Vehicle List</h1>
 
+        <div class="dashboard-header m-4">
+                    <div class="dashboard-menu">
+                        <div class="menu-item border-dashed">
+                            <a href="{% url 'vehicle-add' %}">
+                                <i class="far fa-plus-square icon-plus-square"></i>
+                                <span class="title">Add Vehicle</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+    <ul>
+    <li>lorem ipsum dolor sit amet</li>
+    <li>lorem ipsum dolor sit amet</li>
+    <li>lorem ipsum dolor sit amet</li>
+    <li>lorem ipsum dolor sit amet</li>
+    <li>lorem ipsum dolor sit amet</li>
+    <li>lorem ipsum dolor sit amet</li>
+    </ul>
 
 {% endblock content %}
