--- a/vms_app/templates/vms-drivers-list.html
+++ b/vms_app/templates/vms-drivers-list.html
@@ -2,6 +2,51 @@
 {% block title %}{% endblock %}
 {% block content %}
 
+<h1>Driver List</h1>
 
+    <div class="dashboard-header m-4">
+                    <div class="dashboard-menu">
+                        <div class="menu-item border-dashed">
+                            <a href="{% url 'driver-add' %}">
+                                <i class="far fa-plus-square icon-plus-square"></i>
+                                <span class="title">Add Driver</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+    <table>
+  <thead>
+    <tr>
+        <th>ID</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>National ID</th>
+      <th>Email</th>
+      <th>Phone Number</th>
+      <th>Status</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for driver in drivers %}
+      <tr>
+        <td>{{ driver.pk }}</td>
+        <td>{{ driver.firstName }}</td>
+        <td>{{ driver.lastName }}</td>
+        <td>{{ driver.nationalId }}</td>
+        <td>{{ driver.email }}</td>
+        <td>{{ driver.phoneNumber }}</td>
+        <td>{{ driver.get_status_display }}</td>
+        <td>
+          <a href="{% url 'driver-edit' driver.pk %}">Edit</a>
+          <a href="{% url 'driver-delete' driver.pk %}">Delete</a>
+          <a href="{% url 'driver-details' driver.pk %}">Details</a>
+        </td>
+      </tr>
+    {% endfor %}
+  </tbody>
+</table>
 
 {% endblock content %}
