--- a/vms_app/templates/vms-paths-list.html
+++ b/vms_app/templates/vms-paths-list.html
@@ -2,6 +2,17 @@
 {% block title %}{% endblock %}
 {% block content %}
 
+<h1>Path List</h1>
 
+        <div class="dashboard-header m-4">
+                    <div class="dashboard-menu">
+                        <div class="menu-item border-dashed">
+                            <a href="{% url 'path-add' %}">
+                                <i class="far fa-plus-square icon-plus-square"></i>
+                                <span class="title">Add Path</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
 {% endblock content %}
