--- a/vms_app/templates/login.html
+++ b/vms_app/templates/login.html
@@ -9,5 +9,9 @@
       {{ form.as_p }}
       <button type="submit">Login</button>
     </form>
+  <a href="{% url "register" %}">Sign Up</a>
+        {% if error %}
+        <p style="color: red;">{{ error }}</p>
+        {% endif %}
   </body>
 </html>
