--- a/vms_app/templates/__base__.html
+++ b/vms_app/templates/__base__.html
@@ -21,7 +21,7 @@
                 AGANA <span>VMS</span>
             </a>
          <div class="d-flex justify-content-around">
-             <h4 class="text-light mr-3">Name</h4>
+             <h4 style="color: #1e7e34" >{{ user.username }}</h4>
              <div class="circle-div text-center"><i class="fas fa-user icon-user"></i></div>
          </div>
         </nav>
@@ -51,6 +51,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="">
                                 <span>New User</span>
+                                <i class="fas fa-angle-right"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "logout" %}">
+                                <span>Log Out</span>
                                 <i class="fas fa-angle-right"></i>
                             </a>
                         </li>
