--- a/vms_app/templates/vms-vehicle-add.html
+++ b/vms_app/templates/vms-vehicle-add.html
@@ -2,6 +2,11 @@
 {% block title %}{% endblock %}
 {% block content %}
 
-
+    <h1>Add Vehicle</h1>
+    <form method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit">Save</button>
+    </form>
 
 {% endblock content %}
