--- a/vms_app/templates/vms-path-add.html
+++ b/vms_app/templates/vms-path-add.html
@@ -1,10 +1,10 @@
 {% extends "__base__.html" %}
 {% block title %}{% endblock %}
 {% block content %}
-
-    <h1>Plan Path</h1>
     <form method="post">
       {% csrf_token %}
+    <h1>Plan Path</h1>
+
         <h3>start address</h3>
       {{ form_start }}
         <h3>end address</h3>
@@ -13,15 +13,19 @@
        <label for="cars">Choose a car:</label>
 <select id="cars" name="cars">
     {% for vehicle in vehicles %}
-    <option value="{{ vehicle }}">{{ vehicle.registration_plate }}</option>
+    <option value="{{ vehicle.registration_plate }}">{{ vehicle.registration_plate }}</option>
     {% endfor %}
 </select>
            <label for="cars">Choose a driver:</label>
 <select id="drivers" name="drivers">
     {% for driver in drivers %}
-    <option value="{{ driver }}">{{ driver.lastName }}</option>
+    <option value={{ driver.nationalId }}>{{ driver.lastName }}</option>
     {% endfor %}
 </select>
+      <label for="date">
+          Date
+    <input type="date" name="date" />
+  </label>
       <button type="submit">Save</button>
     </form>
 
